added likes controller
